# Multi-agent-System

./: .dockerignore  .gitignore  ARCHITECTURE.md  Architecture.md  Dockerfile  README.md  auth_server.py  docker-compose.yml  index.html  pyproject.toml  styles.css  telegram_bot.py  test_orchestrator.py
agents/: base.py  llm_utils.py  registry.py  resolver.py  task_store.py
agents/base_agent/: base_a2a_client.py  base_a2a_server.py  base_handler.py  base_mcp_client.py
agents/chat_agent/: main.py
agents/composio_agent/: handler.py  main.py  skills.py
agents/entry_agent/: main.py
agents/news_agent/: handler.py  main.py  skills.py
agents/rag_agent/: handler.py  main.py  skills.py
agents/report_agent/: main.py
agents/sql_agent/: handler.py  main.py  skills.py
agents/weather_agent/: handler.py  main.py  skills.py
common/: a2a_types.py  agent_registry.py  config.py  db.py  errors.py  execute_plan.py  execution_plan.py  logging.py  models.py  tracing.py  utils.py  vector_store.py  whatsapp_store.py
common/prompts/: chat_prompts.py  composio_prompts.py  entry_prompts.py  news_prompts.py  query_prompts.py  rag_prompts.py  report_prompts.py  sql_prompts.py  weather_prompts.py
mcp_server/: app.py  main.py  server.py  test_composio.py  tool_registry.py
mcp_server/tools/: composio_tool.py  fetch_news.py  fetch_weather.py  generate_report.py  query_rag.py  query_sql.py  send_message.py  send_whatsapp_green.py
orchestrator/: executor.py  handler.py  main.py
scripts/: build_rag_index.py
ui/: api_client.py  app.py
ui/components/: news_card.py  report_viewer.py  weather_card.py
whatsapp_baileys/: index.js  node_logs.txt  package-lock.json  package.json
whatsapp_bot/: main.py
whatsapp_gateway/: main.py
whatsapp_green/: main.py
