[project]
name = "multi-agent-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=5.1.0",
    "aiosqlite>=0.22.1",
    "anyio>=4.12.1",
    "datasets>=4.8.2",
    "fais>=0.0.18",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.1",
    "fastmcp>=3.1.1",
    "gradio>=6.9.0",
    "groq>=1.1.1",
    "httpx>=0.28.1",
    "langchain>=1.2.12",
    "langgraph>=1.1.2",
    "mcp>=1.26.0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "opentelemetry-sdk>=1.40.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "twilio>=9.0.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.41.0",
    "composio==0.9.0",
    "bcrypt>=5.0.0",
    "motor>=3.7.1",
    "python-telegram-bot>=22.7",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
    "ruff>=0.15.5",
]
